--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -11,7 +11,9 @@
     "react-native": "0.55.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-jest": "22.4.4",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.4",
     "react-test-renderer": "16.3.1"
