--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-flexbox-grid": "^0.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
